# lockstockbarrel

./: .gitignore  Cargo.toml  README.md  design.norg  flake.nix  shell.nix  todo.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: spec
bevy_composable/: Cargo.toml
bevy_composable/src/: app_impl.rs  delta.rs  lib.rs  tree.rs
bevy_prototype_lyon/: Cargo.toml
bevy_stats/: Cargo.toml
bevy_stats/src/: app_impl.rs  lib.rs  resource.rs  stat.rs  statmod.rs  systems.rs
gui/: Cargo.toml
gui/src/: lib.rs
lock_stock_barrel/: Cargo.toml
lock_stock_barrel/src/: game.rs  hud.rs  lib.rs  mainmenu.rs  pause.rs  states.rs
lock_stock_barrel/src/content/: actor_bits.rs  enemies.rs  mod.rs  projectile.rs  projectile_components.rs  stats.rs  weapons.rs
lock_stock_barrel/src/game/: arms.rs  graphics.rs  level.rs  level_event.rs  level_event_manager.rs  mod.rs  wave_manager.rs
prettegui/: Cargo.toml
prettegui/src/: lib.rs  nice_image_button.rs
src/: actors.rs  ai.rs  enemies.rs  graphics.rs  hud.rs  main.rs  pause.rs  player.rs  projectile.rs  states.rs  stats.rs  util.rs  utils.rs  weapons.rs
src/action_system/: actuator.rs  mod.rs  prefabs.rs
src/action_system/actions/: mod.rs  oneshot.rs  spawn.rs  vel_spawn.rs
src/action_system/triggers/: key_action.rs  mod.rs  propagation.rs  proximity.rs  timer.rs
src/arena/: arena.rs  arena_objects.rs  mod.rs
src/assets/: images.rs  mod.rs
src/content/: actor_bits.rs  enemies.rs  mod.rs  player.rs  projectile.rs  projectile_components.rs  stats.rs  util.rs  weapons.rs
src/debug/: arrows.rs  grid.rs  mod.rs
src/game/: level.rs  level_event.rs  level_event_manager.rs  mod.rs  stats.rs
src/game/arena/: arena_event.rs  mod.rs
src/graphics/: mod.rs
src/states/: mod.rs
src/transform2d/: mod.rs
src/twin_stick/: actors.rs  camera.rs  enemies.rs  events.rs  map.rs  mod.rs  physics.rs  player.rs  projectile.rs  transform2d_mods.rs  utils.rs  weapons.rs
src/twin_stick/ai/: keyboard.rs  mod.rs  tracking.rs  wander.rs
src/ui/: hud.rs  mainmenu.rs  mod.rs  pausemenu.rs
src/vision/: display.rs  events.rs  identify.rs  los.rs  mod.rs  sonar.rs  spotting.rs  tracking.rs
twin_stick/: Cargo.toml
twin_stick/src/: actors.rs  enemies.rs  lib.rs  player.rs  projectile.rs  stats.rs  transform2d_mods.rs  utils.rs  weapons.rs
twin_stick/src/ai/: keyboard.rs  mod.rs  tracking.rs  wander.rs
