[package]
name = "lock_stock_and_barrel"
version = "0.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[features]
inspect = []
physdebug = []

[dependencies]
bevy = {version = "0.14" } 
bevy_egui = { version = "0.29", features = ["immutable_ctx"]}
bevy-inspector-egui = "0.25"
serde = "1.0"
strum = "0.26"
strum_macros = "0.26"

bevy_twin_stick = {git = "https://github.com/Zellenon/bevy_twin_stick.git"}
bevy_composable = {git = "https://github.com/Zellenon/bevy_composable.git"}
bevy_stats = {git = "https://github.com/Zellenon/bevy_stats.git"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
