[package]
name = "lock2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = {version = "0.15" }
bevy_turborand = "0.10"
bevy_egui = { version = "0.33", features = ["immutable_ctx"]}
#bevy_editor_pls = "0.10"
avian2d = "0.2"
# avian2d = {git = "https://github.com/Jondolf/avian"}
serde = "1.0"
strum = "0.26"
strum_macros = "0.26"
bevy_asset_loader = "0.22"
leafwing-input-manager = { version = "0.16", features = ["egui"] }

bevy_composable = {git = "https://github.com/Zellenon/bevy_composable.git"}
bevy_stats = {git = "https://github.com/Zellenon/bevy_stats.git"}
bevy_editor_pls = {git = "https://github.com/ltsoveranakin/bevy_editor_pls"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
