[package]
name = "lock_stock_barrel"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11"}
bevy_egui = "0.22"
bevy-inspector-egui = "0.20"
bevy_embedded_assets = "0.8"
serde = "1.0"
strum = "0.25"
strum_macros = "0.25"
bevy_mod_transform2d = {path = "../bevy_mod_transform2d"}
bevy_prototype_lyon = {version = "0.9"}
# iyes_loopless = "0.9"

twin_stick = {path = "../twin_stick"}
bevy_stats = {path = "../bevy_stats"}
bevy_composable = {path = "../bevy_composable"}
