[package]
name = "twin_stick"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9.0", features = ['dynamic']} # Find a way to disable this for release
bevy_prototype_lyon = "0.7.1"
bevy_rapier2d = {version = "0.19.0", features = ["simd-stable", "debug-render", "parallel"]}
bevy-inspector-egui = "0.14.0"
bevy-inspector-egui-rapier = {version = "0.9.0", features = ['rapier2d']}

bevy_stats = {path = "../bevy_stats"}
