[package]
name = "twin_stick"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11"} # Find a way to disable this for release
# bevy_rapier2d = {version = "0.19.0", features = ["simd-stable", "debug-render", "parallel"]}
bevy_rapier2d = "0.22"
bevy_mod_transform2d = { path = "../bevy_mod_transform2d", features = ["bevy_rapier2d"] }
bevy-inspector-egui = "0.20"
bevy_turborand = "0.6"
# bevy-inspector-egui-rapier = {version = "0", features = ['rapier2d']}
# iyes_loopless = "0.9"

bevy_prototype_lyon = {version = "0.9"}
# bevy_prototype_lyon = {path = "../bevy_prototype_lyon"}
